--- a/info/avs.html
+++ b/info/avs.html
@@ -1,3 +1,6 @@
+<cfheader statuscode="301" statustext="Moved permanently">
+<cfheader name="Location" value="info/avs.cfm">
+This page has permanently moved to http://arctos.database.museum/info/avs.cfm. Please update your bookmarks.
 <!---------------------
 
 
