--- a/info/avs.html
+++ b/info/avs.html
@@ -1,5 +1,7 @@
-<cfheader statuscode="301" statustext="Moved permanently">
-<cfheader name="Location" value="info/avs.cfm">
+
+<meta http-equiv="refresh" content="0; url=/info/avs.cfm" />
+
+
 This page has permanently moved to http://arctos.database.museum/info/avs.cfm. Please update your bookmarks.
 <!---------------------
 
